# rpcpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/typescript/client/: README.md  package.json  tsconfig.json
clients/typescript/client/src/: codec.ts  createClient.ts  envelope.ts  errors.ts  index.ts  transport.ts
clients/typescript/client/src/codecs/: JsonCodec.ts  MsgpackCodec.ts
clients/typescript/client/src/transports/: StdioTransport.ts  spawnStdio.ts
clients/typescript/client/test/: codecs.test.ts  createClient.test.ts  transport.test.ts
clients/typescript/codegen/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
clients/typescript/codegen/src/: cli.ts  generate-rpc-schema.ts  index.ts
clients/typescript/codegen/src/json-schema/: json-schema-to-ts.ts  json-schema-to-zod.ts
clients/typescript/codegen/test/: recursiveTypes.test.ts  writeService.test.ts
cmake/: get_cpm.cmake
codegen/: README.md  package.json
codegen/src/: cli.ts  generate-rpc-schema.ts
codegen/src/json-schema/: json-schema-to-zod.ts  utils.ts
examples/: CMakeLists.txt  async_calc.cpp  calculator.cpp  calculator_msgpack.cpp  calculator_qjs.cpp  discovery.cpp  echo.cpp
src/: Codec.h  Framer.h  Resolver.h  RpcEnvelope.h  RpcServer.h  Stdio.h  Transport.h  TypedRpcServer.h
src/codecs/: JsonCodec.h  MsgpackCodec.h  QuickJSCodec.h
src/qjs/: Parser.hpp  Reader.hpp  Writer.hpp  read.hpp  write.hpp
src/transports/: QueueTransport.h  QuickJSTransport.h  StdioTransport.h
tests/: CMakeLists.txt  msgpack_smoke.cpp  test_codec.cpp  test_framer.cpp  test_quickjs.cpp
